--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   color: #000;
+  font-size: 20px;
 }
 
 a {
@@ -40,7 +41,7 @@ a {
 }
 
 .logo {
-  font-size: 20px;
+  font-size: 1rem;
   line-height: 1.2em;
   font-weight: 600;
 }
@@ -60,7 +61,7 @@ a {
 .navigation__link {
   transition: color 0.3s ease;
   position: relative;
-  font-size: 18px;
+  font-size: 0.9rem;
   line-height: 1.222em;
   font-weight: 600;
 }
@@ -102,7 +103,7 @@ a {
 }
 
 .about-offer__subtitle {
-  font-size: 36px;
+  font-size: 1.8em;
   line-height: 1.222em;
   margin-bottom: 36px;
   display: block;
@@ -113,7 +114,7 @@ a {
 .about__title,
 .portfolio__title,
 .contacts__title {
-  font-size: 72px;
+  font-size: 3.6rem;
   line-height: 1.222em;
   font-weight: 700;
   margin: 0;
@@ -177,18 +178,18 @@ a {
 }
 
 .about-grid__cell p {
-  font-size: 22px;
+  font-size: 1.1rem;
   line-height: 1.409em;
   margin: 0;
 }
 
 .about-grid__cell:last-child p {
-  font-size: 20px;
+  font-size: 1rem;
   line-height: 1.4;
 }
 
 .about__title-second {
-  font-size: 56px;
+  font-size: 2.8rem;
   line-height: 1.232em;
   margin: 0 0 36px 0;
 }
@@ -285,9 +286,6 @@ a {
 
 .contacts-item {
   margin: 0 50px;
-}
-
-.contacts-link {
 }
 
 .contacts-link svg {
